--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "smooth-scroll": "^16.1.3",
     "tailwind-scrollbar-hide": "^1.1.7"
